# BOQ-BID-STUDIO-V0

./: .gitignore  NOTICE.md  README.md  app.py  app_config.py  auth_models.py  auth_service.py  auth_user_store.py  boq_bid_studio.py  embedded_fonts.py  pyproject.toml  railway.json  requirements.txt  ui_app.py  workbook.py
.devcontainer/: devcontainer.json
assets/: .gitkeep
bidstudio/: __init__.py  __main__.py  cli.py  comparison.py  config.py  io.py  reporting.py  search.py
config/: config.yaml
core/: __init__.py  aggregate.py  disciplines.py  excel_outline.py  export.py  ingest.py  matching.py  material_store.py  normalize.py  search.py  utils.py
docs/: comparison_data_overview.md  comparison_tab_improvements.md  multi_user_plan.md  railway_deployment.md  round_workflow_plan.md  upravy_porovnani.md
sample_data/: bid_alpha.csv  bid_beta.csv  master.csv  master_wbs.csv  offer_A.csv  offer_B.csv
tests/: conftest.py  test_aggregate.py  test_app_config.py  test_bid_loading.py  test_cli.py  test_comparison.py  test_description_comparison.py  test_excel_outline.py  test_fingerprint_normalization.py  test_ingest.py  test_io.py  test_matching.py  test_material_collection.py  test_offer_storage.py  test_outline_aggregate.py  test_outline_metadata.py  test_recap_chart.py  test_rounds_supplier_comparison.py  test_search.py
